@@ -40,8 +40,6 @@
     enabled="True" expression="" id="se-highlight.js" inline="False"/>
  <javascript cacheable="True" compression="safe" cookable="True"
     enabled="True" expression="" id="first_input_focus.js" inline="False"/>
- <javascript cacheable="True" compression="full" cookable="True"
-    enabled="True" expression="" id="accessibility.js" inline="False"/>
  <javascript cacheable="True" compression="safe" cookable="True"
     enabled="True" expression="" id="styleswitcher.js" inline="False"/>
  <javascript cacheable="True" compression="safe" cookable="True" enabled="True"
